# aloopvst

./: .gitignore  AGENTS.md  CMakeLists.txt
.github/workflows/: build-plugin.yml
Source/: ApcControlSurface.cpp  ApcControlSurface.h  ApcLeds.h  FaustShim.h  LooperEngine.cpp  LooperEngine.h  ParamStore.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/sampler/: sampler.h
docs/: ARCHITECTURE.md  CLONE-PARITY-REFERENCE.md  COMMAND-SURFACE-REFERENCE.md  INSTALL.md  PARAMETER-MAP.md
dsp/: aloop.dsp  effects_runtime.dsp  loop.dsp
effects/home/faust/: README.md  chain.dsp  delay.dsp  filters.dsp  grainFormant.h  microrepeat.dsp  mixbus.dsp  param_mapping.md  pitch.dsp  pitch_ffi.h  reverb.dsp  soladSnacOctaver.h
